add_executable(test_d_blasfeo_api test_d_blasfeo_api.c)
add_executable(test_s_blasfeo_api test_s_blasfeo_api.c)
target_link_libraries(test_d_blasfeo_api blasfeo_static m)
target_link_libraries(test_s_blasfeo_api blasfeo_static m)

add_test(NAME test_d_blasfeo_api COMMAND test_d_blasfeo_api)
add_test(NAME test_s_blasfeo_api COMMAND test_s_blasfeo_api)